2003-08-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Added some debug logs.  And in
	_replaceObjectsWithTemplates: modified the method to use the
	customClassMap call instead of accessing the map directly.
	* GormClassManager.m: renameClassNamed: and removeClassNamed: both
	were failing to delete the custom class associations when a custom
	class is renamed or removed.  Added the code to do this.
	* GormCustomClassInspector.m: Added check for nil return from the
	classManager.   Code will print a warning to stdout, if this happens.

2003-08-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Corrected selection problem.  Moved code to
	select item in classes view from GormInspectorManager.
	* GormInspectorManager.m: Removed the code from here.

2003-08-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/Containers/main.m: added height resize flag
	to TextView prototype to correct bug #3270

2003-08-23  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.[hm]: Made selectClassWithObject public.
	* GormInspectorManager.m: Added logic to call selectClassWithObject
	so that when an object is selected, the classes view focuses on it.
	
2003-08-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Removed extraneous release calls.  In most
	cases only initWithCapacity and such were being called to create
	dictionaries.  These are not retained, so they will be garbage 
	collected.
	* GormDocument.m: Corrected detachObject: method to handle scroll
	views.  The document view was not being deleted from the custom class
	list, so Gorm was saving a corrupted .gorm file.

2003-08-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: Removed refrences to old template classes.
	Added code to use new template classes and fixed several 
	bugs.
	* Gorm.m: Removed old subclasses for deprecated template classes.